--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 /.gradle
 
 #Idea files
-/.idea
+*.idea
+**/.idea
 *.iml
 *.ipr
 *.iws
@@ -13,5 +14,6 @@
 *.project
 
 #Project
-/build
-/bin
+**/build
+**/bin
+**/out
